--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -34,6 +34,8 @@ opencv-python-headless==4.6.0.66
 psutil==5.9.4
 multilingual-clip==1.0.10
 redis==4.4.2
+readerwriterlock==1.0.9
+cachetools==5.3.1
 
 # pin specific packages (last working 0.0.19 image)
 # to fix ARM64 build scikit-learn error
