--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ urllib3==1.26.0
 pydantic==1.10.11
 httpx==0.25.0
 semver==3.0.2
+scipy==1.10.1
 memory-profiler==0.61.0
 cachetools==5.3.1
 pynvml==11.5.0 # For cuda utilization
