--- a/.github/workflows/unit_test_200gb_CI.yml
+++ b/.github/workflows/unit_test_200gb_CI.yml
@@ -7,11 +7,13 @@ on:
   push:
     branches:
       - mainline
+      - releases/*
     paths-ignore:
       - '**.md'
   pull_request:
     branches:
       - mainline
+      - releases/*
     paths-ignore:
       - '**.md'
 
