--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,5 @@ cachetools==5.3.1
 pynvml==11.5.0 # For cuda utilization
 readerwriterlock==1.0.9
 kazoo==2.10.0
+pycurl==7.45.3
+certifi==2019.11.28
