--- a/scripts/vespa_local/pom.xml
+++ b/scripts/vespa_local/pom.xml
@@ -43,33 +43,29 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
-            <!--
-            <plugin>       
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <version>4.2.1</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Import-Package>
-                            com.google.errorprone.error_prone_annotations;version="[2.28,3.0)"  
-                        </Import-Package>
-                    </instructions>
-                </configuration>
-            </plugin>
-            <plugin>        
-                <groupId>com.yahoo.vespa</groupId>
-                <artifactId>bundle-plugin</artifactId>
-                <version>8.355.18</version>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
+                        <id>copy-resources</id>
+                        <phase>process-resources</phase>
                         <goals>
-                            <goal>generate-osgi-manifest</goal>
+                            <goal>copy-resources</goal>
                         </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/application</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/resources/application</directory>
+                                    <filtering>false</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
-            -->
         </plugins>
     </build>
     <parent>
