--- a/.github/workflows/unit_test_200gb_CI.yml
+++ b/.github/workflows/unit_test_200gb_CI.yml
@@ -96,7 +96,7 @@ jobs:
           # Build application package
           echo "Installing maven"
           apt-get update
-          apt-get install default-jdk -y
+          apt-get install openjdk-17-jdk openjdk-17-jre -y
           apt-get install maven -y
           echo "Building java application package"
           mvn clean package
