--- a/.github/workflows/unit_test_200gb_CI.yml
+++ b/.github/workflows/unit_test_200gb_CI.yml
@@ -95,7 +95,7 @@ jobs:
           
           # Build application package
           echo "Installing maven"
-          apt-get update
+          apt-get update -y
           apt-get install openjdk-17-jdk openjdk-17-jre -y
           apt-get install maven -y
           echo "Building java application package"
