update log messages

--- a/.github/workflows/unit_test_200gb_CI.yml
+++ b/.github/workflows/unit_test_200gb_CI.yml
@@ -94,9 +94,10 @@ jobs:
           echo -e "\nDone waiting."
           
           # Build application package
-          echo "Installing maven"
           apt-get update -y
+          echo "Installing jdk 17"
           apt-get install openjdk-17-jdk openjdk-17-jre -y
+          echo "Installing maven"
           apt-get install maven -y
           echo "Building java application package"
           mvn clean package
