--- a/.github/workflows/unit_test_200gb_CI.yml
+++ b/.github/workflows/unit_test_200gb_CI.yml
@@ -118,7 +118,7 @@ jobs:
           export VESPA_QUERY_URL=http://localhost:8080
 
           export PYTHONPATH="./marqo/tests:./marqo/src:./marqo"
-          pytest marqo/tests
+          pytest -n auto lsmarqo/tests
   
   Stop-Runner:
     name: Stop self-hosted EC2 runner
