--- a/.github/workflows/unit_test_200gb_CI.yml
+++ b/.github/workflows/unit_test_200gb_CI.yml
@@ -80,6 +80,7 @@ jobs:
           export VESPA_CONFIG_URL=http://localhost:19071
           export VESPA_DOCUMENT_URL=http://localhost:8080
           export VESPA_QUERY_URL=http://localhost:8080
+          export ZOOKEEPER_HOSTS=http://localhost:2181
           
           cd marqo/scripts/vespa_local
           set -x
@@ -116,6 +117,7 @@ jobs:
           export VESPA_CONFIG_URL=http://localhost:19071
           export VESPA_DOCUMENT_URL=http://localhost:8080
           export VESPA_QUERY_URL=http://localhost:8080
+          export ZOOKEEPER_HOSTS=http://localhost:2181
 
           export PYTHONPATH="./marqo/tests:./marqo/src:./marqo"
           pytest -n auto lsmarqo/tests
