--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -61,3 +61,7 @@ httpx==0.25.0
 # test requirements
 pyvespa==0.37.1
 pytest==7.4.3
+pytest-cov==5.0.0
+pytest-gc==0.0.1
+setuptools==69.5.1
+pytest-profiling==1.7.0
