Fix the report location, remove unnecessary steps

--- a/.github/workflows/unit_test_200gb_CI.yml
+++ b/.github/workflows/unit_test_200gb_CI.yml
@@ -60,19 +60,6 @@ jobs:
         with:
           python-version: "3.8"
           cache: "pip"
-          
-      - name: Checkout marqo-base for requirements
-        uses: actions/checkout@v3
-        with:
-          repository: marqo-ai/marqo-base
-          path: marqo-base
-
-      - name: Install dependencies
-        run: |
-          # pip install -r marqo-base/requirements.txt
-          # override base requirements with marqo requirements, if needed: 
-          # pip install -r marqo/requirements.dev.txt
-          pip install tox==4.16.0
 
       - name: Build Vespa
         run: |
@@ -133,16 +120,15 @@ jobs:
           export VESPA_CONFIG_URL=http://localhost:19071
           export VESPA_DOCUMENT_URL=http://localhost:8080
           export VESPA_QUERY_URL=http://localhost:8080
+          pip install tox==4.16.0
           cd marqo
           tox
-#          export PYTHONPATH="./marqo/tests:./marqo/src:./marqo"
-#          pytest marqo/tests
 
       - name: Upload Test Report
         uses: actions/upload-artifact@v4
         with:
           name: marqo-test-report
-          path: htmlcov/
+          path: marqo/htmlcov/
   
   Stop-Runner:
     name: Stop self-hosted EC2 runner
