--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,22 +1,11 @@
-# TODO: remove these, only keep test packages
-# tensor search, identical to requirements.txt:
+# BEGIN: from marqo-base: https://github.com/marqo-ai/marqo-base/blob/main/requirements.txt
+# tensor search:
 requests==2.28.1
 anyio==3.7.1
 fastapi==0.86.0
 uvicorn[standard]
 fastapi-utils==0.2.1
 jsonschema==4.17.1
-typing-extensions==4.5.0
-urllib3==1.26.0
-pydantic==1.10.11
-httpx==0.25.0
-semver==3.0.2
-memory-profiler==0.61.0
-pynvml==11.5.0
-kazoo==2.10.0
-pycurl==7.45.3
-certifi==2019.11.28
-transformers==4.41.2
 
 # s2_inference:
 more_itertools
@@ -31,35 +20,39 @@ validators==0.20.0
 sentence-transformers==2.2.2
 open_clip_torch==2.24.0
 clip-marqo==1.0.2
-onnx
-protobuf
+#protobuf==3.20.1
+#onnx==1.12.0
 onnxruntime==1.13.1
 pandas==1.5.1
-optimum==1.20.0
+#optimum==1.4.1 #overriden in marqo
 opencv-python-headless==4.6.0.66
 psutil==5.9.4
 multilingual-clip==1.0.10
 redis==4.4.2
-readerwriterlock==1.0.9
-cachetools==5.3.1
 
 # pin specific packages (last working 0.0.19 image)
 # to fix ARM64 build scikit-learn error
+pyvespa==0.37.1
+
 platformdirs==3.5.0
 safetensors==0.4.1
 timm==0.9.12
+#transformers==4.29.0 #overriden in marqo
 
 flatbuffers==23.5.9
 certifi==2019.11.28
 idna==2.8
 six==1.14.0
 typing-extensions==4.5.0
-urllib3==1.26.0
-pydantic==1.10.11
-httpx==0.25.0
+urllib3==1.26.16
+# END: from marqo-base
+
+-r requirements.txt
+
+onnx
+protobuf
 
 # test requirements
-pyvespa==0.37.1
 pytest==7.4.3
 pytest-cov==5.0.0
 pytest-gc==0.0.1
