--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 # This is a reduced set of requirements used for Marqo's tensor search module
 # If you are running this on your local machine you will need to install additional
 # requirements specified here: https://github.com/marqo-ai/marqo-base/blob/main/requirements.txt
-requests==2.28.1
-anyio==3.7.1
-fastapi==0.86.0
-uvicorn[standard]
-fastapi-utils==0.2.1
-jsonschema==4.17.1
-typing-extensions==4.5.0
-urllib3==1.26.0
+#equests==2.28.1
+#anyio==3.7.1
+#fastapi==0.86.0
+#uvicorn[standard]
+#fastapi-utils==0.2.1
+#jsonschema==4.17.1
+#typing-extensions==4.5.0
+#urllib3==1.26.0 # base image has higher version
 pydantic==1.10.11
 httpx==0.25.0
 semver==3.0.2
