remove --no-cache-dir to install faster.

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ branch = true
 source = src
 
 [testenv]
-install_command = pip install --no-cache-dir {opts} {packages}
+install_command = pip install {opts} {packages}
 whitelist_externals =
   python
 deps =
