Apply telemetry leak fix
Fix workflows

--- a/.github/workflows/largemodel_unit_test_CI.yml
+++ b/.github/workflows/largemodel_unit_test_CI.yml
@@ -4,7 +4,11 @@ name: largemodel_unit_test_CI
 on:
   workflow_call:
   workflow_dispatch:
-
+  push:
+    branches:
+      - 'releases/1.5.x'
+    paths-ignore:
+      - '**.md'
 permissions:
   contents: read
 
