--- a/.github/workflows/arm64_local_os_CI.yml
+++ b/.github/workflows/arm64_local_os_CI.yml
@@ -13,7 +13,12 @@ on:
           Otherwise, the specified docker image is tested. For example "marqoai/marqo:test"
   push:
     branches:
-      mainline
+      - 'releases/1.5.x'
+    paths-ignore:
+      - '**.md'
+  pull_request:
+    branches:
+      - 'releases/1.5.x'
     paths-ignore:
       - '**.md'
 
@@ -79,6 +84,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: marqo-ai/marqo-api-tests
+          ref: 1.5.x
           
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -93,6 +99,7 @@ jobs:
           export MQ_API_TEST_BRANCH=$(echo "${GITHUB_REF}" | cut -d'/' -f3-)
           CUSTOM_TEST_IMG="${{ github.event.inputs.image_to_test }}"
           export MQ_API_TEST_IMG=${CUSTOM_TEST_IMG:-"marqo_docker_0"}
+          export MQ_PY_MARQO_BRANCH=git+https://github.com/marqo-ai/py-marqo.git
           tox -e py3-arm64_local_os
   
   Stop-Runner:
