--- a/.github/workflows/dind_os_CI.yml
+++ b/.github/workflows/dind_os_CI.yml
@@ -13,7 +13,12 @@ on:
           Otherwise, the specified docker image is tested. For example "marqoai/marqo:test"
   push:
     branches:
-      mainline
+      - 'releases/1.5.x'
+    paths-ignore:
+      - '**.md'
+  pull_request:
+    branches:
+      - 'releases/1.5.x'
     paths-ignore:
       - '**.md'
 
@@ -40,7 +45,7 @@ jobs:
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          ec2-image-id:  ${{ secrets.AMD_200GB_EC2_IMAGE_ID }}
+          ec2-image-id: ${{ secrets.AMD_200GB_EC2_IMAGE_ID }}
           ec2-instance-type: t3.xlarge
           subnet-id: ${{ secrets.AMD_SUBNET_ID }}
           security-group-id: ${{ secrets.AMD_SECURITY_GROUP_ID }}
@@ -49,11 +54,11 @@ jobs:
     name: Run Docker-in-Docker API Tests
     needs: Start-Runner # required to start the main job when the runner is ready
     runs-on: ${{ needs.start-runner.outputs.label }} # run the job on the newly created runner
-                
-    environment: marqo-test-suite 
+
+    environment: marqo-test-suite
     
     steps:
-       
+
       - name: Checkout marqo repo
         uses: actions/checkout@v3
         with:
@@ -64,7 +69,7 @@ jobs:
         with:
           python-version: "3.8"
           cache: "pip"
-          
+
       - name: Install Dependencies
         run: |
           #pip install -r requirements.txt
@@ -72,25 +77,27 @@ jobs:
           pip install flake8
       
       # linting here
-  
+
       - name: Checkout marqo-api-tests repo
         uses: actions/checkout@v3
         with:
           repository: marqo-ai/marqo-api-tests
-          
+          ref: 1.5.x
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-          
+
       - name: Set up Environment
         run: |
           # Set up conf file
           echo 'export MARQO_API_TESTS_ROOT="${{ github.workspace }}"' >> conf
-          
+
       - name: Run Integration Tests - dind_os
         run: |
           export MQ_API_TEST_BRANCH=$(echo "${GITHUB_REF}" | cut -d'/' -f3-)
           CUSTOM_TEST_IMG="${{ github.event.inputs.image_to_test }}"
           export MQ_API_TEST_IMG=${CUSTOM_TEST_IMG:-"marqo_docker_0"}
+          export MQ_PY_MARQO_BRANCH=git+https://github.com/marqo-ai/py-marqo.git
           tox -e py3-dind_os
   
   Stop-Runner:
