--- a/.github/workflows/unit_test_200gb_CI.yml
+++ b/.github/workflows/unit_test_200gb_CI.yml
@@ -6,12 +6,12 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - 'releases/1.5.x'
+      - 'releases/*'
     paths-ignore:
       - '**.md'
   pull_request:
     branches:
-      - 'releases/1.5.x'
+      - 'releases/*'
     paths-ignore:
       - '**.md'
 
