--- a/.github/workflows/dind_os_CI.yml
+++ b/.github/workflows/dind_os_CI.yml
@@ -14,11 +14,13 @@ on:
   push:
     branches:
       - 'releases/1.5.x'
+      - 'releases/1.4.x'
     paths-ignore:
       - '**.md'
   pull_request:
     branches:
       - 'releases/1.5.x'
+      - 'releases/1.4.x'
     paths-ignore:
       - '**.md'
 
@@ -82,7 +84,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: marqo-ai/marqo-api-tests
-          ref: 1.5.x
+          ref: 1.4.x
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
