--- a/.github/workflows/local_os_CI.yml
+++ b/.github/workflows/local_os_CI.yml
@@ -13,7 +13,14 @@ on:
           Otherwise, the specified docker image is tested. For example "marqoai/marqo:test"
   push:
     branches:
-      mainline
+      - 'releases/1.5.x'
+      - 'releases/1.4.x'
+    paths-ignore:
+      - '**.md'
+  pull_request:
+    branches:
+      - 'releases/1.5.x'
+      - 'releases/1.4.x'
     paths-ignore:
       - '**.md'
 
@@ -77,6 +84,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: marqo-ai/marqo-api-tests
+          ref: 1.4.x
           
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
